update meta data

--- a/julia/index.html
+++ b/julia/index.html
@@ -5,11 +5,11 @@
 <meta name="description" content="3 ways to compute Julia fractal set in realtime with HTML5. Single javascript process, 4 webworkers process and the powerfull WebGL-GLSL Shader.">
 <meta name="keywords" content="experiment,html5,canvas,webgl,web workers">
 <meta property="og:title" content="Julia fractal set.">
-<meta property="og:url" content="http://www.ycake.fr/julia/julia_workers.html">
+<meta property="og:url" content="http://nekofu.github.io/julia/julia_workers.html">
 <meta property="og:site_name" content="Julia Set Experiment">
 <meta property="og:type" content="experiment">
 <meta property="og:description" content="3 ways to compute Julia fractal set with HTML5. Single javascript process, 4 webworkers process and the powerfull WebGL-GLSL Shader.">
-<meta property="og:image" content="http://www.ycake.fr/julia/graph/julia_small.png">
+<meta property="og:image" content="http://nekofu.github.io/julia/graph/julia_small.png">
 <meta http-equiv="REFRESH" content="0;url=julia_canvas.html">
 </head>
 </html>
