change style of page root

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>NeKoFu Experiments</title>
+	<meta name="description" content="My own experiments HUB.">
+	<meta name="keywords" content="experiment,html5,canvas,webgl,web workers">
+	<meta property="og:title" content="NeKoFu">
+	<meta property="og:url" content="http://nekofu.github.io">
+	<meta property="og:site_name" content="NeKoFu Experiments">
+	<meta property="og:type" content="experiment">
+	<meta property="og:description" content="3 ways to compute Julia fractal set with HTML5. Single javascript process, 4 webworkers process and the powerfull WebGL-GLSL Shader.">
+	<link href='http://fonts.googleapis.com/css?family=Syncopate' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Hello Sweetie!</h1>
